// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config-moderating reducer should handle END_SERVICE_CONFIG_MODERATING 1`] = `
Object {
  "approved": null,
  "comment": null,
  "id": null,
  "progress": false,
}
`;

exports[`config-moderating reducer should handle END_SERVICE_CONFIG_MODERATING 2`] = `
Object {
  "approved": null,
  "comment": null,
  "id": null,
  "progress": false,
}
`;

exports[`config-moderating reducer should handle START_SERVICE_CONFIG_MODERATING 1`] = `
Object {
  "approved": "approved",
  "comment": "",
  "configId": 239,
  "id": 239,
  "progress": true,
  "serviceId": 123,
  "type": "START_SERVICE_CONFIG_MODERATING",
}
`;

exports[`config-moderating reducer should handle START_SERVICE_CONFIG_MODERATING 2`] = `
Object {
  "approved": "declined",
  "comment": "decline message",
  "configId": 239,
  "id": 239,
  "progress": true,
  "serviceId": 123,
  "type": "START_SERVICE_CONFIG_MODERATING",
}
`;

exports[`config-moderating reducer should return the initial state 1`] = `
Object {
  "approved": null,
  "comment": null,
  "id": null,
  "progress": false,
}
`;

exports[`config-moderating reducer should return the initial state 2`] = `
Object {
  "approved": null,
  "comment": null,
  "id": null,
  "progress": false,
}
`;
